DBJR-210: set fixed width of login dropdown to prevent jump while loading social login widgets

--- a/assets/less/components/common/dropdowns.less
+++ b/assets/less/components/common/dropdowns.less
@@ -9,7 +9,7 @@
 
 // Container
 .dropdown-menu-combo {
-    min-width: 18em;
+    width: 18em;
     padding: 1em;
 
     > .divider {
